# RuinEngine

./: README.md
RuinEngine/: CMakeLists.txt
RuinEngine/assets/shaders/: test_vert.spv
RuinEngine/include/: ruin.h
RuinEngine/src/: ruin.c  ruin__internal.h  ruin_comp_transform.c  ruin_math.c
RuinEngine/src/ri_platform/: ri_platform.c  ri_platform.h  ri_platform_input.c  ri_platform_time.c  ri_platform_window.c
RuinEngine/src/ri_renderer/: draw_frame.c  record_command.c  ri_renderer.c  ri_renderer.h  ri_renderer_command.c  ri_renderer_core.c  ri_renderer_framebuffer.c  ri_renderer_pipeline.c  ri_renderer_renderpass.c  ri_renderer_swapchain.c  ri_renderer_sync.c
RuinEngine/test/: main.c
